# cookiecutter_repo

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
src/rami_project/: data.py  evaluate.py  tasks.py  train.py  visualize.py
tests/: test_data.py
