[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rami_project"
version = "0.0.1"
description = "None"
authors = [
  { name = "rami_name", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
lint.select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "rami_project.train:train"
evaluate = "rami_project.evaluate:evaluate"
iris = "rami_project.iris_classifier:main"